# keypal

./: .doit.db  .flake8  .gitignore  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml
Bitwarden/: Bitwarden.py
docs/source/: API.rst  conf.py  index.rst
keypal/Database/: database.py
keypal/bitwarden/: Bitwarden.py  Bitwarden_Test2.py  Bitwarden_Test_with_mock.py  __init__.py  bitwarden.py  test_bitwarden_client.py  test_bitwarden_mocker.py
keypal/database/: __init__.py  database.py
keypal/tgbot/: __init__.py  __main__.py  handlers.py  keyboards.py
locales/ru_RU.UTF-8/LC_MESSAGES/: tgbot.po
specification/: bot_spec.md
tgbot/: main.py
